# monolife

./: .dir-locals.el  .dirlocals.el  .gitignore  Makefile  Makefile.am  README.org  configure.ac  life.cc  main.cc  percolate.cc  percolate.service  running_average.h
src/: .gitignore  Makefile.am  board.cc  board.h  clear.cc  monolife.cc  percolate.cc  persistent_mutable_timer.h  running_average.h  util.h
